# procedural-interpretability

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
checklists/: core_mmm_v0.1.yaml
configs/: experiment_openai_demo.yaml
data/contexts/: sample_contexts.jsonl
data/tasks/: sample_tasks.jsonl
docs/: CONVENTIONS.md  experiment_design.md  research_infrastructure.md
notebooks/: 01_minimal_decision_trace.ipynb  02_experiment_matrix.ipynb
perturbations/: context_perturbations.yaml
scripts/: run_openai_demo.py
src/procedural_interp/: checklists.py  evaluator.py  io.py  models.py  prompts.py  runner.py  schemas.py
